@@ -7,6 +7,8 @@
    dialog.
 4. Add 'Subtitle' to advanced search for LMS 9.0+ - thanks to Michael Herger.
 5. On desktop browsers dim main toolbar when window does not have focus.
+6. For desktop layout if queue is shown unpinned then adjust position of hover
+   buttons in browse lists.
 
 6.1.0
 -----
